--- a/public/style.css
+++ b/public/style.css
@@ -117,3 +117,62 @@ form div {
   display: flex;
   background-size: cover;
 }
+
+#userHome {
+  display: flex;
+  flex-wrap: wrap;
+}
+.userHomeCard {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  height: 300px;
+  background-color: #757780;
+  margin-top: 20px;
+  margin-right: 20px;
+  color: white;
+  text-align: center;
+  box-shadow: 3px 3px 5px grey;
+}
+
+.userHomeCard a {
+  color: white;
+}
+
+#dashboardPrompt {
+  width: 980px;
+  margin-top: 20px;
+  background-color: #757780;
+  box-shadow: 3px 3px 5px grey;
+  color: white;
+  height: 400px;
+  padding: 20px;
+}
+
+#dashboardPrompt a {
+  color: white;
+}
+
+.dashBtn {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  text-align: center;
+  width: 200px;
+  height: 50px;
+  background-color: #e3b505;
+  /* margin-top:  */
+  margin-right: 50px;
+  border-radius: 5px;
+  color: white;
+  /* align-self: flex-end; */
+}
+.dashBtn h4 {
+  margin-top: 10px;
+}
+.promptButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 40px;
+}
