--- a/public/style.css
+++ b/public/style.css
@@ -180,11 +180,45 @@ form div {
   margin-top: 40px;
 }
 
-#solutionDiv {
-  margin: 30pt;
+#solutionBtn {
+  box-sizing: border-box;
+  background-color: #34d1bf;
+  border: 2px solid #34d1bf;
+  border-radius: 0.6em;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 20px;
+  padding: 1.2em 2.8em;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+
+#solutionBtn a {
+  color: white;
 }
 
 #solution {
   display: flex;
   flex-wrap: wrap;
+}
+
+.nextChallengeBtn {
+  box-sizing: border-box;
+  background-color: purple;
+  border: 2px solid purple;
+  border-radius: 0.6em;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 20px;
+  padding: 1.2em 2.8em;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+
+.nextChallengeBtn a {
+  color: white;
 }
