css styling changes. nav now horizontal. more flexible components

--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,9 @@ body {
   font-family: sans-serif;
   margin: auto 0;
 }
-.content {
+/* .content {
   margin-left: 350px;
-}
+} */
 
 a {
   text-decoration: none;
@@ -31,18 +31,31 @@ nav a {
 
 #logo {
   margin-left: 10px;
+  font-size: 40px;
 }
 
 #navigation {
-  flex-direction: column;
-  height: 1300px;
+  flex-direction: row;
   color: white;
   background-color: #465775;
-  width: 320px;
   position: fixed;
+  width: 100%;
   top: 0;
-  height: 100%;
-  margin-right: 20px;
+  box-shadow: 3px 3px 5px grey;
+}
+
+.navLinks {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-left: 15px;
+}
+
+.bodyComponent {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  justify-content: space-around;
 }
 
 form div {
@@ -61,6 +74,7 @@ form div {
 
 #app {
   display: flex;
+  flex-direction: column;
 }
 
 #code {
@@ -81,11 +95,66 @@ form div {
 
 .btnContainer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-end;
+}
+
+#login {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  background-color: #b8bbc7;
+  box-shadow: 3px 3px 5px grey;
+  /* height: 200px; */
+  align-items: center;
+}
+
+#notGoogle {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.loginBtn {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  /* min-width: 50%;
+  max-width: 140px; */
+  min-height: 30px;
+  background-color: #ef6f6c;
+  /* margin-top: 10px;
+  margin-right: 50px; */
+  border-radius: 5px;
+  color: white;
+  font-size: 16px;
+  padding-left: 5px;
+  padding-right: 5px;
+  box-shadow: 3px 3px 5px grey;
+}
+
+.loginBtn a {
+  color: white;
+}
+
+.loginSignup {
+  display: flex;
+  flex-direction: row;
+}
+
+.loginInput {
+  height: 20px;
+  width: 200px;
+  font-size: 16px;
 }
 
 .nextBtn {
   display: flex;
+  justify-content: center;
   align-items: center;
   text-align: center;
   width: 200px;
@@ -98,6 +167,12 @@ form div {
   box-shadow: 3px 3px 5px grey;
   align-self: flex-end;
 }
+
+.nextBtn a {
+  text-align: center;
+  color: white;
+}
+
 #keywordsGot {
   color: green;
 }
@@ -107,6 +182,12 @@ form div {
 
 .containsABot {
   display: flex;
+}
+
+#bot {
+  margin-top: 100px;
+  align-self: flex-end;
+  /* position: fixed; */
 }
 
 #botDiv {
@@ -119,14 +200,18 @@ form div {
   background-size: cover;
 }
 
-#userHome {
+/* #userHome {
   display: flex;
   flex-wrap: wrap;
-}
+} */
 .userHomeCard {
   display: flex;
   flex-direction: column;
-  width: 500px;
+  flex-grow: 2;
+  flex-shrink: 1;
+  flex-wrap: wrap;
+  min-width: 100px;
+  max-width: 500px;
   height: 300px;
   background-color: #b8bbc7;
   margin-top: 20px;
@@ -141,7 +226,10 @@ form div {
 }
 
 #dashboardPrompt {
-  width: 980px;
+  min-width: 200px;
+  max-width: 500px;
+  flex-grow: 1;
+  flex-shrink: 2;
   margin-top: 20px;
   background-color: #b8bbc7;
   box-shadow: 3px 3px 5px grey;
@@ -163,7 +251,7 @@ form div {
   height: 50px;
   background-color: #e3b505;
   /* margin-top:  */
-  margin-right: 50px;
+  margin-top: 20px;
   border-radius: 5px;
   color: white;
   /* align-self: flex-end; */
@@ -176,8 +264,9 @@ form div {
 .promptButtons {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
-  margin-top: 40px;
+  /* margin: 20px; */
 }
 
 #solutionBtn {
@@ -221,4 +310,13 @@ form div {
 
 .nextChallengeBtn a {
   color: white;
+}
+
+.challengeLink {
+  margin: 20px;
+}
+
+.challengeLink a:hover {
+  font-size: 20px;
+  color: #142d58;
 }
