--- a/public/style.css
+++ b/public/style.css
@@ -131,7 +131,7 @@ form div {
   margin-right: 50px; */
   border-radius: 5px;
   color: white;
-  font-size: 16px;
+  font-size: 14px;
   padding-left: 5px;
   padding-right: 5px;
   box-shadow: 3px 3px 5px grey;
@@ -185,9 +185,9 @@ form div {
 }
 
 #bot {
-  margin-top: 100px;
+  margin-top: 120px;
+  margin-left: 10px;
   align-self: flex-end;
-  /* position: fixed; */
 }
 
 #botDiv {
