updates background color for bot card

--- a/public/style.css
+++ b/public/style.css
@@ -231,7 +231,7 @@ form div {
 
 #botCard {
   padding: 10px;
-  background-color: #5f0f40;
+  background-color: #aa767c;
   box-shadow: 3px 3px 5px black;
 }
 
