--- a/public/style.css
+++ b/public/style.css
@@ -491,11 +491,21 @@ hr {
   }
 }
 
-#stopRec {
-  width: 70px;
+#pauseBtn {
+  width: 30px;
   height: 30px;
+  border-color: #202020;
+  padding: 10px;
+  border-style: solid;
+  border-width: 10px;
+  background-color: white;
+  margin: 10px;
 }
 
-#promptAnnyang {
-  /* sizing */
+#recordingDiv {
+  display: flex;
+  align-items: center;
+  background-color: #202020;
+  border-radius: 12px;
+  margin: 10px;
 }
