--- a/public/style.css
+++ b/public/style.css
@@ -301,7 +301,7 @@ input {
 }
 .userHomeCard {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-grow: 2;
   flex-shrink: 1;
   flex-wrap: wrap;
@@ -313,6 +313,7 @@ input {
   color: #4b4b4b;
   text-align: center;
   box-shadow: 3px 3px 5px black;
+  align-items: center;
 }
 
 .userHomeCard #login {
@@ -453,30 +454,34 @@ hr {
 }
 
 .notRec {
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
   font-size: 0;
   background-color: red;
   border: 0;
-  border-radius: 35px;
-  margin: 18px;
+  border-radius: 30px;
+  margin: 10px;
   outline: none;
   background-color: darkred;
+  justify-self: center;
+  align-self: center;
 }
 
 .Rec {
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
   font-size: 0;
   background-color: red;
   border: 0;
-  border-radius: 35px;
-  margin: 18px;
+  border-radius: 30px;
+  margin: 10px;
   outline: none;
   animation-name: pulse;
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+  justify-self: center;
+  align-self: center;
 }
 
 @keyframes pulse {
@@ -497,7 +502,7 @@ hr {
   border-color: #202020;
   padding: 10px;
   border-style: solid;
-  border-width: 10px;
+  border-width: 4px;
   background-color: white;
   margin: 10px;
 }
@@ -508,4 +513,17 @@ hr {
   background-color: #202020;
   border-radius: 12px;
   margin: 10px;
+  width: 140px;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+#submitBtn {
+  border: none;
+  background-color: #c1aba6;
+  text-decoration: underline;
+  color: #4b4b4b;
+  font-size: 1.5em;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
 }
