added some styling to make the homepage look the same

--- a/public/style.css
+++ b/public/style.css
@@ -441,6 +441,10 @@ hr {
   margin: 20px;
 }
 
+.topicLink {
+  margin: 20px;
+}
+
 .challengeLink a:hover {
   /* font-size: 20px; */
   text-decoration: underline;
