--- a/public/style.css
+++ b/public/style.css
@@ -103,6 +103,10 @@ nav a {
   margin-left: 15px;
 }
 
+#errorMessage {
+  color: lightgray;
+}
+
 .bodyComponent {
   display: flex;
   flex-wrap: wrap;
