--- a/public/style.css
+++ b/public/style.css
@@ -34,9 +34,8 @@ nav a {
   color: lightgray;
 }
 
-@media screen and (max-width: 600px) {
-}
-@media screen and (min-width: 600px) {
+h1 {
+  color: #5f0f40;
 }
 
 @media screen and (max-width: 600px) {
@@ -172,7 +171,7 @@ input {
   margin-bottom: 10px;
 }
 #login {
-  margin-top: 60px;
+  margin-top: 120px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -188,6 +187,36 @@ input {
   flex-direction: column;
 }
 
+/* .borderCard {
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  flex-shrink: 1;
+  background-color: #5f0f40;
+  box-shadow: 3px 3px 5px black;
+  align-items: center;
+  width: 100%;
+  min-height: 50px;
+} */
+
+.borderCard {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 2;
+  flex-shrink: 1;
+  flex-wrap: wrap;
+  min-width: 100px;
+  max-width: 500px;
+  background-color: #5f0f40;
+  margin-top: 120px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 30px;
+  box-shadow: 3px 3px 5px black;
+  align-items: center;
+}
+
 #notGoogle {
   display: flex;
   flex-direction: row;
@@ -200,18 +229,15 @@ input {
   justify-content: center;
   align-items: center;
   text-align: center;
-  /* min-width: 50%;
-  max-width: 140px; */
   min-height: 30px;
   background-color: #c1aba6;
   border-color: #c1aba6;
   margin-bottom: 10px;
   border-radius: 5px;
-  color: #4b4b4b;
+  color: #5f0f40;
   font-size: 14px;
   padding-left: 5px;
   padding-right: 5px;
-  /* box-shadow: 3px 3px 5px grey; */
 }
 
 .loginBtn a {
@@ -227,11 +253,6 @@ input {
   height: 20px;
   width: 200px;
   font-size: 16px;
-}
-
-#guestCard {
-  color: #4b4b4b;
-  background-color: #c1aba6;
 }
 
 #goBtn {
@@ -311,7 +332,7 @@ input {
   margin: 20px;
   padding: 30px;
   color: #4b4b4b;
-  text-align: center;
+  text-align: justify;
   box-shadow: 3px 3px 5px black;
   align-items: center;
 }
