--- a/public/style.css
+++ b/public/style.css
@@ -6,10 +6,9 @@ body {
   font-family: 'Roboto', sans-serif;
   padding-top: 40px;
 }
-.content {
-  /* margin-top: 120px; */
+/* .content {
   justify-content: space-around;
-}
+} */
 
 a {
   text-decoration: none;
@@ -78,11 +77,11 @@ h1 {
   flex-wrap: wrap;
 }
 
-.codeAloud {
+/* .codeAloud {
   margin-right: 15px;
   height: 10px;
   margin-bottom: 0px;
-}
+} */
 
 #navigation {
   flex-direction: row;
@@ -129,13 +128,13 @@ h1 {
   max-width: 800px;
 }
 
-.challengeDetails {
+/* .challengeDetails {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   margin: 30px;
   max-width: 600;
-}
+} */
 .container {
   display: flex;
   justify-content: space-around;
@@ -143,13 +142,13 @@ h1 {
   flex-wrap: wrap;
 }
 
-.containerColumn {
+/* .containerColumn {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-}
+} */
 
-#guestCard .container {
+/* #guestCard .container {
   justify-content: center;
   align-items: center;
 }
@@ -160,13 +159,13 @@ h1 {
 
 #guestCard h2 {
   text-decoration: underline;
-}
+} */
 
-.btnContainer {
+/* .btnContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
-}
+} */
 
 input {
   margin-bottom: 10px;
@@ -205,11 +204,11 @@ input {
   align-items: center;
 }
 
-#notGoogle {
+/* #notGoogle {
   display: flex;
   flex-direction: row;
   width: 100%;
-}
+} */
 
 .loginBtn {
   display: flex;
@@ -232,10 +231,10 @@ input {
   color: white;
 }
 
-.loginSignup {
+/* .loginSignup {
   display: flex;
   flex-direction: row;
-}
+} */
 
 .loginInput {
   height: 20px;
@@ -243,11 +242,11 @@ input {
   font-size: 16px;
 }
 
-#goBtn {
+/* #goBtn {
   background-color: #5f0f40;
   box-shadow: none;
   color: lightgrey;
-}
+} */
 
 .nextBtn {
   display: flex;
@@ -286,9 +285,9 @@ input {
   margin: 5px;
 }
 
-.containsABot {
+/* .containsABot {
   display: flex;
-}
+} */
 
 #bot {
   margin-top: 120px;
@@ -296,16 +295,16 @@ input {
   align-self: flex-start;
 }
 
-#botCard {
+/* #botCard {
   padding: 10px;
   background-color: #aa767c;
   box-shadow: 3px 3px 5px black;
-}
+} */
 
-#botDiv {
+/* #botDiv {
   justify-self: flex-end;
   align-self: center;
-}
+} */
 
 #approachDiv {
   display: flex;
@@ -382,7 +381,7 @@ input {
   color: white;
 } */
 
-.dashBtn {
+/* .dashBtn {
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -390,11 +389,11 @@ input {
   width: 200px;
   height: 50px;
   background-color: #c1aba6;
-  /* margin-top:  */
+  margin-top:
   margin-top: 20px;
   border-radius: 5px;
   color: #4b4b4b;
-  /* align-self: flex-end; */
+  align-self: flex-end;
   box-shadow: 3px 3px 5px black;
 }
 .dashBtn h4 {
@@ -406,8 +405,8 @@ input {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  /* margin: 20px; */
-}
+  margin: 20px;
+} */
 
 .ynButton {
   margin: 10px;
