--- a/public/style.css
+++ b/public/style.css
@@ -193,12 +193,13 @@ input {
 
 .borderCard {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
   flex-grow: 2;
   flex-shrink: 1;
   flex-wrap: wrap;
   min-width: 100px;
-  max-width: 500px;
+
   background-color: #5f0f40;
   margin-top: 120px;
   margin-left: 10px;
@@ -206,6 +207,8 @@ input {
   padding: 30px;
   box-shadow: 3px 3px 5px black;
   align-items: center;
+  align-content: space-around;
+  justify-content: space-evenly;
 }
 
 /* #notGoogle {
