--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,10 @@ body {
   justify-content: space-around;
 } */
 
+.bigOContent {
+  display: flex;
+}
+
 a {
   text-decoration: none;
 }
@@ -208,6 +212,41 @@ input {
   align-items: center;
 }
 
+.bigOBorderCard {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 2;
+  flex-shrink: 1;
+  flex-wrap: wrap;
+  min-width: 100px;
+  max-width: 800px;
+  background-color: #5f0f40;
+  margin-top: 120px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 30px;
+  box-shadow: 3px 3px 5px black;
+  align-items: center;
+}
+
+.bigODetailsBorderCard {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 2;
+  flex-shrink: 1;
+  flex-wrap: wrap;
+  min-width: 100px;
+  max-width: 700px;
+  background-color: #5f0f40;
+  margin-top: 120px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 30px;
+  box-shadow: 3px 3px 5px black;
+  align-items: center;
+  max-height: 700px;
+}
+
 /* #notGoogle {
   display: flex;
   flex-direction: row;
@@ -321,6 +360,7 @@ input {
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
 .userHomeCard {
   display: flex;
   flex-direction: column;
@@ -336,6 +376,17 @@ input {
   text-align: justify;
   box-shadow: 3px 3px 5px black;
   align-items: center;
+}
+
+.bigOCard {
+  display: flex;
+  background-color: #c1aba6;
+  margin: 20px;
+  padding: 30px;
+  color: #4b4b4b;
+  box-shadow: 3px 3px 5px black;
+  align-items: center;
+  height: 600px;
 }
 
 .userHomeCard #login {
