--- a/public/style.css
+++ b/public/style.css
@@ -6,9 +6,6 @@ body {
   font-family: 'Roboto', sans-serif;
   padding-top: 40px;
 }
-/* .content {
-  justify-content: space-around;
-} */
 
 .bigOContent {
   display: flex;
@@ -57,6 +54,10 @@ h1 {
     width: 350px;
     height: 1000px;
   }
+
+  nav a {
+    margin: 5px;
+  }
 }
 @media screen and (min-width: 600px) {
   .fa-comments {
@@ -80,12 +81,6 @@ h1 {
   display: flex;
   flex-wrap: wrap;
 }
-
-/* .codeAloud {
-  margin-right: 15px;
-  height: 10px;
-  margin-bottom: 0px;
-} */
 
 #navigation {
   flex-direction: row;
@@ -119,6 +114,7 @@ h1 {
 #Annyang {
   height: 350;
   width: 800;
+  margin-right: 15px;
 }
 
 #prompt {
@@ -136,44 +132,12 @@ h1 {
   max-width: 800px;
 }
 
-/* .challengeDetails {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  margin: 30px;
-  max-width: 600;
-} */
 .container {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
 }
-
-/* .containerColumn {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-} */
-
-/* #guestCard .container {
-  justify-content: center;
-  align-items: center;
-}
-
-#guestCard i {
-  font-size: 40px;
-}
-
-#guestCard h2 {
-  text-decoration: underline;
-} */
-
-/* .btnContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-} */
 
 input {
   margin-bottom: 10px;
@@ -203,16 +167,36 @@ input {
   flex-shrink: 1;
   flex-wrap: wrap;
   min-width: 100px;
-
+  max-width: 420px;
   background-color: #5f0f40;
   margin-top: 120px;
   margin-left: 10px;
   margin-right: 10px;
-  padding: 30px;
+  /* padding: 30px; */
   box-shadow: 3px 3px 5px black;
   align-items: center;
   align-content: space-around;
   justify-content: space-evenly;
+}
+
+.largeViewBorderCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  /* flex-grow: 2; */
+  flex-shrink: 1;
+  flex-wrap: wrap;
+  min-width: 100px;
+  max-width: 900px;
+  background-color: #5f0f40;
+  margin-top: 120px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  box-shadow: 3px 3px 5px black;
+  align-content: space-around;
+  justify-content: space-evenly;
+  height: 100%;
 }
 
 .bigOBorderCard {
@@ -227,7 +211,7 @@ input {
   margin-top: 120px;
   margin-left: 10px;
   margin-right: 10px;
-  padding: 30px;
+  /* padding: 30px; */
   box-shadow: 3px 3px 5px black;
   align-items: center;
 }
@@ -250,11 +234,23 @@ input {
   max-height: 700px;
 }
 
-/* #notGoogle {
-  display: flex;
-  flex-direction: row;
+#promptAnnyang {
+  flex-direction: column;
+  text-align: left;
+  align-items: flex-start;
+}
+
+#promptAnnyang textarea {
+  font-size: 16px;
+}
+
+.annyangContainer {
+  align-items: center;
   width: 100%;
-} */
+  flex-direction: row;
+  display: flex;
+  justify-content: space-evenly;
+}
 
 .loginBtn {
   display: flex;
@@ -331,26 +327,11 @@ input {
   margin: 5px;
 }
 
-/* .containsABot {
-  display: flex;
-} */
-
 #bot {
   margin-top: 120px;
   margin-left: 10px;
   align-self: flex-start;
 }
-
-/* #botCard {
-  padding: 10px;
-  background-color: #aa767c;
-  box-shadow: 3px 3px 5px black;
-} */
-
-/* #botDiv {
-  justify-self: flex-end;
-  align-self: center;
-} */
 
 #approachDiv {
   display: flex;
@@ -371,7 +352,8 @@ input {
   flex-shrink: 1;
   flex-wrap: wrap;
   min-width: 100px;
-  max-width: 500px;
+  max-width: 400px;
+  min-height: 500px;
   background-color: #c1aba6;
   margin: 20px;
   padding: 30px;
@@ -382,11 +364,23 @@ input {
   height: 75%;
 }
 
-#userHome .userHomeCard {
-  max-width: 500px;
-}
-#userHome .borderCard {
-  max-width: 500px;
+.largeViewCard {
+  display: flex;
+  /* flex-direction: column; */
+  flex-grow: 2;
+  flex-shrink: 1;
+  flex-wrap: wrap;
+  min-width: 100px;
+  /* min-height: 500px; */
+  max-width: 800px;
+  background-color: #c1aba6;
+  margin: 10px;
+  padding: 30px;
+  color: #4b4b4b;
+  text-align: justify;
+  box-shadow: 3px 3px 5px black;
+  align-items: center;
+  height: 75%;
 }
 
 .bigOCard {
@@ -432,51 +426,6 @@ input {
 #instructions {
   flex-direction: column;
 }
-/*
-
-#dashboardPrompt {
-  min-width: 200px;
-  max-width: 500px;
-  flex-grow: 1;
-  flex-shrink: 2;
-  margin-top: 20px;
-  /* background-color: #7cafc4; */
-/* box-shadow: 3px 3px 5px grey;
-  color: white;
-  height: 400px;
-  padding: 20px; */
-/* } */
-
-/* #dashboardPrompt a {
-  color: white;
-} */
-
-/* .dashBtn {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  text-align: center;
-  width: 200px;
-  height: 50px;
-  background-color: #c1aba6;
-  margin-top:
-  margin-top: 20px;
-  border-radius: 5px;
-  color: #4b4b4b;
-  align-self: flex-end;
-  box-shadow: 3px 3px 5px black;
-}
-.dashBtn h4 {
-  margin-top: 10px;
-  color: white;
-}
-.promptButtons {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin: 20px;
-} */
 
 .ynButton {
   margin: 10px;
@@ -530,7 +479,7 @@ hr {
 }
 
 .challengeLink {
-  margin: 20px;
+  margin: 10px;
 }
 
 .topicLink {
