--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,10 @@ h1 {
   color: #5f0f40;
 }
 
+#slides {
+  margin-top: 120px;
+}
+
 @media screen and (max-width: 600px) {
   .fa-comments {
     font-size: 20px;
