--- a/public/style.css
+++ b/public/style.css
@@ -38,16 +38,19 @@ h1 {
   color: #5f0f40;
 }
 
-#slides {
-  margin-top: 120px;
-}
-
 @media screen and (max-width: 600px) {
   .fa-comments {
     font-size: 20px;
     margin: 5px;
   }
 
+  #slides {
+    margin: 20px;
+  }
+
+  iframe {
+    margin: 20px;
+  }
   #logo {
     width: 100px;
     height: 38px;
@@ -95,12 +98,20 @@ h1 {
   top: 0;
   box-shadow: 3px 3px 5px black;
   margin: 0 auto;
+  min-height: 100px;
+  padding: 5px;
+}
+
+.linksAndLogin {
+  display: flex;
+  width: 100%;
+  align-content: center;
 }
 
 .navLinks {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin-left: 15px;
   width: 50%;
@@ -170,8 +181,37 @@ input {
   align-content: center;
   align-items: center;
   justify-content: space-around;
-  width: 80%;
+  width: 90%;
+  margin-left: 25px;
   /* flex-direction: column; */
+}
+
+.homeBorderCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  /* flex-grow: 2; */
+  flex-shrink: 1;
+  flex-wrap: wrap;
+  min-width: 100px;
+  max-width: 1100px;
+  background-color: #5f0f40;
+  margin-top: 120px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  box-shadow: 3px 3px 5px black;
+  align-items: flex-start;
+  /* height: 100%; */
+}
+
+.homeLeft {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  margin: 20px;
+  height: 560px;
 }
 
 .borderCard {
@@ -274,11 +314,11 @@ input {
   align-items: center;
   text-align: center;
   min-height: 26px;
-  background-color: #c1aba6;
+  background-color: #5f0f40;
   border-color: #c1aba6;
   margin-bottom: 10px;
   border-radius: 5px;
-  color: #5f0f40;
+  color: white;
   font-size: 14px;
   padding-left: 5px;
   padding-right: 5px;
@@ -366,6 +406,17 @@ input {
   box-shadow: 3px 3px 5px black;
   align-items: center;
   height: 75%;
+}
+
+#getStarted {
+  display: flex;
+  width: 100%;
+  height: 225px;
+  background-color: #c1aba6;
+  box-shadow: 3px 3px 5px black;
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
 }
 
 .largeViewCard {
