--- a/public/style.css
+++ b/public/style.css
@@ -7,10 +7,6 @@ body {
   padding-top: 40px;
 }
 
-.bigOContent {
-  display: flex;
-}
-
 a {
   text-decoration: none;
 }
@@ -255,41 +251,6 @@ input {
   height: 100%;
 }
 
-.bigOBorderCard {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 2;
-  flex-shrink: 1;
-  flex-wrap: wrap;
-  min-width: 100px;
-  max-width: 800px;
-  background-color: #5f0f40;
-  margin-top: 120px;
-  margin-left: 10px;
-  margin-right: 10px;
-  /* padding: 30px; */
-  box-shadow: 3px 3px 5px black;
-  align-items: center;
-}
-
-.bigODetailsBorderCard {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 2;
-  flex-shrink: 1;
-  flex-wrap: wrap;
-  min-width: 100px;
-  max-width: 700px;
-  background-color: #5f0f40;
-  margin-top: 120px;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 30px;
-  box-shadow: 3px 3px 5px black;
-  align-items: center;
-  max-height: 700px;
-}
-
 #promptAnnyang {
   flex-direction: column;
   text-align: left;
@@ -451,17 +412,6 @@ input {
   align-items: center;
   height: 75%;
   justify-content: space-evenly;
-}
-
-.bigOCard {
-  display: flex;
-  background-color: #c1aba6;
-  margin: 20px;
-  padding: 30px;
-  color: #4b4b4b;
-  box-shadow: 3px 3px 5px black;
-  align-items: center;
-  height: 600px;
 }
 
 .userHomeCard #login {
@@ -732,4 +682,72 @@ hr {
   display: flex;
   align-content: center;
   justify-content: space-around;
+}
+
+.bigOContent {
+  display: flex;
+  flex-direction: row;
+  align-content: flex-end;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.bigOBorderCard {
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+  height: 33%;
+  background-color: #5f0f40;
+  box-shadow: 3px 3px 5px black;
+  align-self: flex-end;
+  padding: 1%;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 13%;
+}
+
+.bigOChartCard {
+  display: flex;
+  background-color: #c1aba6;
+  margin: 5%;
+  padding: 5%;
+  color: #4b4b4b;
+  box-shadow: 3px 3px 5px black;
+  align-items: center;
+  justify-items: center;
+  height: 85%;
+  width: 85%;
+  flex-direction: column;
+}
+
+.bigOAboutCard {
+  display: flex;
+  background-color: #c1aba6;
+  margin: 5%;
+  padding: 7%;
+  color: #4b4b4b;
+  box-shadow: 3px 3px 5px black;
+  align-items: center;
+  justify-items: center;
+  height: 75%;
+  width: 80%;
+  flex-direction: column;
+  font-size: 95%;
+}
+
+.bigONextBtn {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  font-size: 95%;
+  width: 40%;
+  height: 5%;
+  padding: 2%;
+  background-color: #c1aba6;
+  margin-bottom: 7%;
+  border-radius: 5px;
+  color: #4b4b4b;
+  box-shadow: 3px 3px 5px black;
+  align-self: center;
 }
