--- a/public/style.css
+++ b/public/style.css
@@ -707,6 +707,20 @@ hr {
   margin-top: 13%;
 }
 
+.bigOAboutBorderCard {
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+  height: 37%;
+  background-color: #5f0f40;
+  box-shadow: 3px 3px 5px black;
+  align-self: flex-end;
+  padding: 1%;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10%;
+}
+
 .bigOChartCard {
   display: flex;
   background-color: #c1aba6;
@@ -721,19 +735,35 @@ hr {
   flex-direction: column;
 }
 
-.bigOAboutCard {
+.bigOTableCard {
   display: flex;
   background-color: #c1aba6;
   margin: 5%;
-  padding: 7%;
+  padding: 5%;
   color: #4b4b4b;
   box-shadow: 3px 3px 5px black;
   align-items: center;
   justify-items: center;
-  height: 75%;
+  height: 85%;
+  width: 85%;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.bigOAboutCard {
+  display: flex;
+  background-color: #c1aba6;
+  margin: 5%;
+  padding: 5%;
+  color: #4b4b4b;
+  box-shadow: 3px 3px 5px black;
+  align-items: center;
+  justify-items: center;
+  height: 80%;
   width: 80%;
   flex-direction: column;
   font-size: 95%;
+  text-align: center;
 }
 
 .bigONextBtn {
@@ -741,7 +771,7 @@ hr {
   text-align: center;
   align-items: center;
   font-size: 95%;
-  width: 40%;
+  width: 32%;
   height: 5%;
   padding: 2%;
   background-color: #c1aba6;
@@ -750,4 +780,30 @@ hr {
   color: #4b4b4b;
   box-shadow: 3px 3px 5px black;
   align-self: center;
+}
+
+table {
+  border-collapse: collapse;
+  margin: 5%;
+  padding: 5%;
+}
+
+th {
+  background-color: #ad879e;
+  border: 1px solid #222222;
+  padding: 10px;
+}
+
+td {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  border: 1px solid #222222;
+  background-color: #e1d3db;
+}
+
+li {
+  text-align: left;
 }
