--- a/public/style.css
+++ b/public/style.css
@@ -477,8 +477,9 @@ input {
   min-height: 500px;
   background-color: #c1aba6;
   margin: 20px;
+  font-family: 'Roboto Mono', monospace;
   padding: 30px;
-  color: #37383a;
+  color: #202020;
   text-align: justify;
   box-shadow: 3px 3px 5px black;
   align-items: center;
@@ -498,6 +499,21 @@ input {
   justify-content: center;
   align-items: center;
   background-image: url(https://imgur.com/a/rnQPFiF);
+}
+#getStarted2 {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  color: #c1aba6;
+  width: 80%;
+  height: 290px;
+  background-color: #664f5c;
+  box-shadow: 3px 3px 5px black;
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  background-image: url(https://imgur.com/a/rnQPFiF);
+  align-self: center;
 }
 
 #getStarted a {
@@ -525,7 +541,8 @@ input {
   background-color: #c1aba6;
   margin: 10px;
   padding: 30px;
-  color: #4b4b4b;
+  color: #202020;
+  font-family: 'Roboto Mono', monospace;
   text-align: justify;
   box-shadow: 3px 3px 5px black;
   align-items: center;
@@ -575,7 +592,7 @@ input {
 
 #instructions {
   display: flex;
-
+  color: #202020;
   flex-grow: 2;
   flex-shrink: 1;
   flex-wrap: wrap;
@@ -585,10 +602,11 @@ input {
   background-color: #c1aba6;
   margin: 20px;
   padding: 30px;
-  color: #4b4b4b;
+
   text-align: justify;
   box-shadow: 3px 3px 5px black;
   align-items: center;
+  justify-content: center;
 }
 .innerInstructions {
   display: flex;
@@ -596,6 +614,7 @@ input {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  font-family: 'Roboto Mono', monospace;
 }
 .instructionText {
   flex: 0 1 auto;
@@ -844,4 +863,5 @@ hr {
   width: 80%;
   max-width: 700px;
   align-self: center;
+  margin-bottom: 30px;
 }
