flex box edits for solution page and big o

--- a/public/style.css
+++ b/public/style.css
@@ -288,6 +288,20 @@ input {
   align-content: space-around;
   justify-content: space-evenly;
 }
+
+.solutionsBorderCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #5f0f40;
+  margin: 5%;
+  padding: 2%;
+  box-shadow: 3px 3px 5px black;
+  align-items: center;
+  align-content: space-around;
+  justify-content: space-evenly;
+}
+
 .biggerBorderCard {
   display: flex;
   flex-direction: row;
@@ -825,7 +839,7 @@ hr {
   flex-wrap: wrap;
 }
 
-.bigOBorderCard {
+.bigOChartBorderCard {
   display: flex;
   flex-direction: column;
   width: 33%;
@@ -839,11 +853,25 @@ hr {
   margin-top: 13%;
 }
 
+.bigOBorderCard {
+  display: flex;
+  flex-direction: column;
+  /* width: 33%;
+  height: 33%; */
+  background-color: #5f0f40;
+  box-shadow: 3px 3px 5px black;
+  align-self: flex-end;
+  padding: 1%;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 13%;
+}
+
 .bigOAboutBorderCard {
   display: flex;
   flex-direction: column;
-  width: 33%;
-  height: 37%;
+  /* width: 33%;
+  height: 37%; */
   background-color: #5f0f40;
   box-shadow: 3px 3px 5px black;
   align-self: flex-end;
@@ -876,8 +904,8 @@ hr {
   box-shadow: 3px 3px 5px black;
   align-items: center;
   justify-items: center;
-  height: 85%;
-  width: 85%;
+  /* height: 85%;
+  width: 85%; */
   flex-direction: column;
   justify-content: center;
 }
@@ -891,8 +919,8 @@ hr {
   box-shadow: 3px 3px 5px black;
   align-items: center;
   justify-items: center;
-  height: 80%;
-  width: 80%;
+  /* height: 80%;
+  width: 80%; */
   flex-direction: column;
   font-size: 95%;
   text-align: center;
@@ -903,8 +931,6 @@ hr {
   text-align: center;
   align-items: center;
   font-size: 95%;
-  width: 32%;
-  height: 5%;
   padding: 2%;
   background-color: #c1aba6;
   margin-bottom: 7%;
@@ -937,5 +963,20 @@ td {
 }
 
 li {
+  text-align: left;
+}
+
+.solutionCard {
+  display: flex;
+  background-color: #c1aba6;
+  margin: 2%;
+  padding: 2%;
+  color: #202020;
+  box-shadow: 3px 3px 5px black;
+  font-size: 95%;
+  flex-direction: column;
+}
+
+pre {
   text-align: left;
 }
