--- a/public/style.css
+++ b/public/style.css
@@ -191,11 +191,11 @@ h3 {
   flex-direction: column;
 }
 
-#code {
+/* #code {
   display: flex;
   flex-direction: column;
   max-width: 800px;
-}
+} */
 
 .container {
   display: flex;
@@ -333,7 +333,7 @@ input {
   box-shadow: 3px 3px 5px black;
   align-content: space-around;
   justify-content: space-evenly;
-  height: 100%;
+  /* height: 100%; */
 }
 
 #promptAnnyang {
@@ -516,7 +516,7 @@ input {
   text-align: justify;
   box-shadow: 3px 3px 5px black;
   align-items: center;
-  height: 75%;
+  /* height: 75%; */
   justify-content: space-evenly;
 }
 
@@ -577,6 +577,20 @@ input {
 }
 .instructionText {
   flex: 0 1 auto;
+}
+
+#code {
+  margin-top: 120px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
+  align-content: flex-start;
+}
+
+#code .largeViewBorderCard {
+  margin-top: 10px;
 }
 
 .ynButton {
